[gd_scene load_steps=6 format=3 uid="uid://c1igbc7fuokf4"]

[ext_resource type="Texture2D" uid="uid://cxtxfb16angd0" path="res://Assets/BG Assets/Wall.PNG" id="1_1koy0"]
[ext_resource type="Script" path="res://UI/black_out.gd" id="2_3ruem"]
[ext_resource type="Texture2D" uid="uid://dpxigermf4ywv" path="res://Assets/CatEyes.png" id="3_swfty"]
[ext_resource type="Script" path="res://Levels/cat_eyes.gd" id="4_otdlw"]
[ext_resource type="AudioStream" uid="uid://dlhnb6ylovcqy" path="res://Assets/Sound Effects/LightFlicker.mp3" id="5_qfavk"]

[node name="BlackOut" type="TextureRect" node_paths=PackedStringArray("debuff_timer")]
modulate = Color(0, 0, 0, 0)
offset_left = -1256.0
offset_top = -752.0
offset_right = 1232.0
offset_bottom = 916.0
texture = ExtResource("1_1koy0")
script = ExtResource("2_3ruem")
debuff_timer = NodePath("DebuffTimer")

[node name="CatEyes" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
light_mask = 2
visibility_layer = 2
position = Vector2(0, 16)
texture = ExtResource("3_swfty")
script = ExtResource("4_otdlw")

[node name="DebuffTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="LightsOut" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_qfavk")

[connection signal="timeout" from="DebuffTimer" to="." method="_on_debuff_timer_timeout"]
